[gd_scene load_steps=5 format=3 uid="uid://cgo2p83k3w1b5"]

[ext_resource type="Script" path="res://scenes/objects/MoneyGatherer/money_gatherer.gd" id="1_d3phu"]
[ext_resource type="PackedScene" uid="uid://dfikyf3j6k1sa" path="res://scenes/objects/MoneyGatherer/money_click_effect.tscn" id="1_e4ttm"]
[ext_resource type="AudioStream" uid="uid://catxpwojx5w05" path="res://assets/audio/switch10.ogg" id="3_e0ddc"]
[ext_resource type="Texture2D" uid="uid://c76lq72wyhttt" path="res://assets/sprites/butto3.png" id="4_12xs3"]

[node name="MoneyGatherer" type="Node2D"]
position = Vector2(139, 104)
script = ExtResource("1_d3phu")
icon_to_show = ExtResource("4_12xs3")
amount_to_earn = 5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e0ddc")
bus = &"SFX"

[node name="MoneyClickEffect" parent="." instance=ExtResource("1_e4ttm")]
position = Vector2(19, 12)

[node name="MoneyAddedContainer" type="Node2D" parent="."]
position = Vector2(0, -6)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_12xs3")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 63.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
